--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -18,11 +18,13 @@
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "link": "^1.5.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "^0.69.6",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-link": "^4.1.0",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.9.1",
@@ -30,7 +32,9 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-video": "^5.2.1",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
