Made progress with image upload and gym selection.

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,4 @@ FACEBOOK_APP_SECRET=b8747f556bd458fa07f47ea92937226f
 CLOUDINARY_CLOUD_NAME=dcmbmqlad
 CLOUDINARY_KEY=254553763584943
 CLOUDINARY_SECRET=azxKYYhm_91RpK8nPSxIGGpHX0g
+GOOGLE_MAPS_API_KEY = AIzaSyD6KjDgjslpsHSSvgt8ZiU9W33Qx_eblzk
