--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -33,7 +33,10 @@
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6",
-    "expo-image-picker": "~13.3.1"
+    "expo-image-picker": "~13.3.1",
+    "expo-image-manipulator": "~10.4.0",
+    "react-native-maps": "0.31.1",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
