--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -17,12 +18,16 @@
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.6",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.9.1",
@@ -32,11 +37,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.6",
-    "expo-image-picker": "~13.3.1",
-    "expo-image-manipulator": "~10.4.0",
-    "react-native-maps": "0.31.1",
-    "expo-location": "~14.3.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
