--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -37,7 +37,10 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-auth-session": "~3.7.1",
+    "expo-random": "~12.3.0",
+    "expo-web-browser": "~11.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
