--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -43,7 +43,8 @@
     "react-native-web": "~0.18.7",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "@react-native-community/slider": "4.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
