Chat room is created upon a match. Messages are sent in real time but still needs to be integrated with DB.

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=3001
+SOCKET_PORT=4000
 DB_URL = 'mongodb+srv://mitchell:mitch123@cluster0.aog1wen.mongodb.net/?retryWrites=true&w=majority'
 CLOUDINARY_CLOUD_NAME=dcmbmqlad
 CLOUDINARY_KEY=254553763584943
