--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.2.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -41,10 +42,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
-    "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
-    "styled-components": "^5.3.6",
-    "@react-native-community/slider": "4.2.3"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
