--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "0.31.1",
+    "react-native-modal": "^13.0.1",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.9.1",
