--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -44,6 +44,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
+    "rn-range-slider": "^2.2.2",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6"
   },
