--- a/frontend/Spot-Me/package.json
+++ b/frontend/Spot-Me/package.json
@@ -13,7 +13,6 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "4.2.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -42,11 +41,12 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.7",
     "rn-range-slider": "^2.2.2",
     "socket.io-client": "^4.5.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-updates": "~0.14.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
