Added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-server/node_modules/
+Spot-Me/server/node_modules/
 Spot-Me/node_modules/
 client/node_modules/
 /.pnp
 .pnp.js
-
+Spot-Me/server/.env
+UserCredentials.txt
+Spot-Me/.expo/
+Spot-Me/package-lock.json
+Spot-Me/server/package-lock.json
+Spot-Me/frontend/package-lock.json
+Spot-Me/frontend/Spot-Me/package-lock.json
 # testing
 /coverage
 
