Added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-Spot-Me/server/node_modules/
+server/node_modules/
 Spot-Me/node_modules/
 client/node_modules/
 /.pnp
 .pnp.js
-Spot-Me/server/.env
-UserCredentials.txt
-Spot-Me/.expo/
-Spot-Me/package-lock.json
-Spot-Me/server/package-lock.json
-Spot-Me/frontend/package-lock.json
-Spot-Me/frontend/Spot-Me/package-lock.json
+package-lock.json
 # testing
 /coverage
 
@@ -32,3 +26,11 @@ yarn-error.log*
 
 frontend/Spot-Me/.env
 .vscode/settings.json
+server/.env
+server/package-lock.json
+server/node_modules
+.expo/
+package-lock.json
+UserCredentials.txt
+frontend/package-lock.json
+frontend/Spot-Me/package-lock.json
